# hsbot

./: .gitignore  Hsbot.hs  Main.hs  README.markdown  hsbot.cabal
Hsbot/: Config.hs  Core.hs  Message.hs  Types.hs  Utils.hs
Hsbot/Plugin/: Admin.hs  Alias.hs  CTCP.hs  Converter.hs  Echo.hs  Help.hs  Mueval.hs  Ping.hs  Quote.hs  Scheme.hs  User.hs
plugins/buffer/: hsbot-plugin-buffer.cabal
plugins/buffer/Hsbot/Plugin/: Buffer.hs
plugins/converter/: hsbot-plugin-converter.cabal
plugins/converter/Hsbot/Plugin/: Converter.hs
plugins/echo/: hsbot-plugin-echo.cabal
plugins/echo/Hsbot/Plugin/: Echo.hs
plugins/help/: hsbot-plugin-help.cabal
plugins/help/Hsbot/Plugin/: Help.hs
plugins/mueval/: hsbot-plugin-mueval.cabal
plugins/mueval/Hsbot/Plugin/: Mueval.hs
plugins/rpgsh/: hsbot-plugin-rpg.cabal
plugins/rpgsh/Hsbot/Plugin/: Rpgsh.hs
plugins/user/: hsbot-plugin-user.cabal
plugins/user/Hsbot/Plugin/: User.hs
src/: Hsbot.hs  Setup.hs  hsbot.cabal
src/Hsbot/: Access.hs  Core.hs  Message.hs  Types.hs  Utils.hs
src/Hsbot/Plugin/: Admin.hs  CTCP.hs  Ping.hs  Quote.hs
