Name:               hsbot
Version:            0.5.15.2
Cabal-version:      >=1.2
Synopsis:           A flexible IRC bot
Description:
  hsbot is a general-purpose IRC bot, configured
  and extended with haskell.
Homepage:           http://www.gitub.com/Sornaensis/hsbot/
License:            BSD3
License-file:       LICENSE
Author:             Julien Dessaux, Kyle Jones
Maintainer:         sornaensis@gmail.com
Copyright:          Copyright (c) 2010 Julien Dessaux,
                    Copyright (c) 2015 Kyle Jones
Category:           Hsbot
Build-type:         Simple


Library
  ghc-options: -Wall
  exposed-modules:  Hsbot
                    Hsbot.Config
                    Hsbot.Core
                    Hsbot.Message
                    Hsbot.Plugin
                    Hsbot.Plugin.Admin
                    Hsbot.Plugin.Alias
                    Hsbot.Plugin.Buffer
                    Hsbot.Plugin.CTCP
                    Hsbot.Plugin.Echo
                    Hsbot.Plugin.Help
                    Hsbot.Plugin.Mueval
                    Hsbot.Plugin.Ping
                    Hsbot.Plugin.Converter
                    Hsbot.Plugin.Scheme
                    Hsbot.Types
                    Hsbot.Utils
  Extensions:       FlexibleContexts ScopedTypeVariables PackageImports OverloadedStrings
  Build-depends:    acid-state,
                    base >= 4.1 && < 5,
                    bytestring,
                    certificate,
                    containers,
                    cprng-aes,
                    curl,
                    cryptocipher,
                    dyre,
                    data-default,
                    data-default-class,
                    hint,
                    hslogger,
                    HTTP,
                    irc,
                    mtl,
                    mueval,
                    network,
                    parsec,
                    process,
                    quantities,
                    random,
                    safecopy,
                    split,
                    text,
                    tls == 1.2.8,
                    time,
                    transformers,
                    unix,
                    utf8-string,
                    xdg-basedir


Executable hsbot
  Main-is:          Main.hs
  Ghc-options:      -Wall 
  Extensions:       FlexibleContexts ScopedTypeVariables PackageImports OverloadedStrings
  Build-depends:    base >= 4.1 && < 5

