Name:               hsbot-plugin-help
Version:            0.1
Cabal-version:      >=1.2
Synopsis:           Hsbot2 Help Plugin
Description:
  An hsbot2 plugin that implements the bot help system
Homepage:           http://www.gitub.com/Sornaensis/hsbot2/
License:            BSD3
License-file:       ../../LICENSE
Author:             Julien Dessaux, Kyle Jones
Maintainer:         sornaensis@gmail.com
Copyright:          Copyright (c) 2010 Julien Dessaux,
                    Copyright (c) 2015 Kyle Jones
Category:           Hsbot
Build-type:         Simple


Library
  ghc-options: -Wall 
  exposed-modules:  Hsbot.Plugin.Help
  Extensions:       FlexibleContexts ScopedTypeVariables PackageImports OverloadedStrings
  Build-depends:    base >= 4.1 && < 5,
                    containers,
                    hsbot >= 0.5.15.2,
                    irc,
                    mtl,
                    utf8-string


